<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Banco de Sueños</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hola %1$s!</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="app_id">592887884098048</string>
    <string name="exception">Exception: %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_goal">Un Nuevo sueño</string>
    <string name="title_activity_main">Mis Sueños</string>
    <string name="title_activity_custom_goal">Personaliza tu sueño</string>
    <string name="pregunta_nombre">El nombre de tu sueño</string>
    <string name="texto_explicacionNombre">Si deseas cuentanos el por qué de este sueño</string>
    <string name="boton_ok">Ok ></string>
    <string name="boton_omitir">Omitir</string>
    <string name="pregunta_como_ahorras">¿Cuánto puedes ahorrar?</string>
    <string name="boton_login">Ingresa con tu correo</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="title_activity_photos">Galería de Fotos</string>
    <string name="boton_confirmar">Confirmar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_calcular">Calcular</string>
    <string name="title_activity_amigos">Mis Amigos</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_perfil_goal">Mi Sueño</string>
    <string name="title_activity_config">Configuración de perfil</string>
    <string name="numer_one">1</string>
    <string name="number_two">2</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_three">3</string>
    <string name="numer_seven">7</string>
    <string name="title_activity_new_user_">NewUser_Activity</string>
    <string name="string_money">$0.00</string>
    <string name="string_balance">Balance de Dinero</string>
    <string name="string_balance_add">Agregar Dinero</string>
    <string name="string_balance_remove">Retirar Dineto</string>
    <string name="title_list_account">Ultimos movimientos</string>

</resources>
