<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg3" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_bds_mini" />

    <LinearLayout
        android:id="@+id/activity_pass_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" >

        <EditText
            android:id="@+id/activity_pass_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword"
            android:maxLength="1" />

        <EditText
            android:id="@+id/activity_pass_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:inputType="textPassword"
            android:maxLength="1" />

        <EditText
            android:id="@+id/activity_pass_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword"
            android:focusable="false"
            android:maxLength="1" />

        <EditText
            android:id="@+id/activity_pass_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword"
            android:focusable="false"
            android:maxLength="1" >
        </EditText>

    </LinearLayout>

	<GridLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:columnCount="3"
	    android:orientation="horizontal" >
	    
	    <Button 
	        android:id="@+id/activity_pass_num1"
	        android:text="@string/numer_one"
	        android:background="@drawable/shapes"
	        style="@style/PassButton"
	      />
	 
	    <Button 
	        android:id="@+id/activity_pass_num2"
	        android:text="@string/number_two"
	        android:background="@drawable/shapes"
	        style="@style/PassButton"
	         />
	 
	    <Button
	        android:id="@+id/activity_pass_num3"
	        style="@style/PassButton"
	        android:background="@drawable/shapes"
	        android:text="@string/number_three" />
	 
	    <Button 
	        android:id="@+id/activity_pass_num4"
	        android:text="@string/number_four"
	        style="@style/PassButton"
	     />
	 
	    <Button 
	        android:id="@+id/activity_pass_num5"
	        android:text="@string/number_five"
	        style="@style/PassButton"
	        />
	 
	    <Button
	        android:id="@+id/activity_pass_num6"
	        style="@style/PassButton"
	        android:text="@string/number_six" />
	 
	    <Button
	        android:id="@+id/activity_pass_num7"
	        style="@style/PassButton"
	        android:text="@string/numer_seven" />
	 
	    <Button 
	        android:id="@+id/activity_pass_num8"
	        android:text="8"
	        style="@style/PassButton" />
	 
	    <Button 
	        android:id="@+id/activity_pass_num9"
	        android:text="9"
	        style="@style/PassButton" />
	    
	    <Button
	        android:id="@+id/activity_pass_num0" 
	        android:layout_column="1"
	        android:text="0"
	        style="@style/PassButton" />
	
	    <Button
	        android:id="@+id/activity_pass_delete"
	        android:layout_width="match_parent"
	        android:layout_gravity="fill_horizontal"
	        android:background="@drawable/shapes"
	        android:padding="20dp"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:text="Borrar" />
	
	    
	</GridLayout>
</LinearLayout>
