<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1_tilde"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CustomGoalActivity" >

    
    <EditText
        android:id="@+id/CustomG_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>
 
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignLeft="@+id/CustomG_Name"
        android:layout_alignRight="@+id/CustomG_Name"
        android:layout_below="@+id/CustomG_Name"
        android:layout_marginTop="27dp"
        android:src="@android:drawable/progress_indeterminate_horizontal" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginRight="43dp"
        android:src="@android:drawable/ic_menu_search" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_marginRight="43dp"
        android:src="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/imageButton1"
        android:layout_marginTop="18dp"
        android:text="@string/texto_explicacionNombre"
        android:textAlignment="center"
        android:textColor="@color/blue_title" />

    <Button
        android:id="@+id/start_bcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_alignRight="@+id/imageButton2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/boton_ok"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start_bcorreo"
        android:layout_alignBottom="@+id/start_bcorreo"
        android:layout_alignLeft="@+id/textView2"
        android:layout_toLeftOf="@+id/start_bcorreo"
        android:text="@string/boton_omitir"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/imageButton2"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/pregunta_nombre"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
